--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="card-holder">
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
